[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "streamlit>=1.41.1",
    "tensorflow>=2.18.0",
    "xgboost>=2.1.3",
    "scikit-learn>=1.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
